--- a/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/packages.config
+++ b/Textbook Exercises/ASP.NETMVCPlatform/Ch13_IdentityApiSupport/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.4.4" targetFramework="net481" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net481" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.4" targetFramework="net481" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.4" targetFramework="net481" />
@@ -12,23 +12,24 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net481" />
   <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net481" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.1" targetFramework="net481" />
   <package id="Microsoft.Extensions.Identity.Core" version="8.0.6" targetFramework="net481" />
   <package id="Microsoft.Extensions.Logging" version="8.0.0" targetFramework="net481" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.1" targetFramework="net481" />
   <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net481" />
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net481" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.Owin.Security.Cookies" version="4.2.2" targetFramework="net481" />
+  <package id="Microsoft.Owin.Security.Google" version="2.0.2" targetFramework="net481" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Owin" version="1.0" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net481" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net481" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net481" />
   <package id="System.Memory" version="4.5.5" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
