--- a/Textbook Exercises/PRO_ASP.NET_WebAPI/Part2.SampleApp.Domain/Part2.SampleApp.Domain.csproj
+++ b/Textbook Exercises/PRO_ASP.NET_WebAPI/Part2.SampleApp.Domain/Part2.SampleApp.Domain.csproj
@@ -51,11 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IEntity.cs" />
+    <Compile Include="Entities\DBContext\EntitiesContext.cs" />
+    <Compile Include="Entities\DBContext\IEntity.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Role.cs" />
-    <Compile Include="User.cs" />
-    <Compile Include="UserInRole.cs" />
+    <Compile Include="Entities\Role.cs" />
+    <Compile Include="Entities\User.cs" />
+    <Compile Include="Entities\UserInRole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
