--- a/SportsStore/SportsStore.WebUI/packages.config
+++ b/SportsStore/SportsStore.WebUI/packages.config
@@ -3,7 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net481" />
   <package id="bootstrap" version="5.3.3" targetFramework="net481" />
   <package id="Castle.Core" version="5.1.1" targetFramework="net481" />
-  <package id="EntityFramework" version="6.1.0" targetFramework="net481" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
   <package id="jQuery" version="3.7.1" targetFramework="net481" />
   <package id="jQuery.Validation" version="1.21.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net481" />
@@ -16,9 +16,9 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net481" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net481" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net481" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net481" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net481" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net481" />
+  <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net481" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.2.2" targetFramework="net481" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.21.0" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
@@ -26,7 +26,8 @@
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Ninject" version="3.3.6" targetFramework="net481" />
   <package id="Owin" version="1.0" targetFramework="net481" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net481" />
+  <package id="Respond" version="1.4.2" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
   <package id="WebGrease" version="1.6.0" targetFramework="net481" />
 </packages>
