--- a/SportsStore/SportsStore.WebUI/packages.config
+++ b/SportsStore/SportsStore.WebUI/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net481" />
   <package id="bootstrap" version="5.3.3" targetFramework="net481" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net481" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
   <package id="jQuery" version="3.7.1" targetFramework="net481" />
   <package id="Knockout.Validation" version="2.0.4" targetFramework="net481" />
@@ -32,8 +33,10 @@
   <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.21.0" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
   <package id="Modernizr" version="2.8.3" targetFramework="net481" />
+  <package id="Moq" version="4.20.71" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net481" />
+  <package id="Ninject" version="3.3.6" targetFramework="net481" />
   <package id="Owin" version="1.0" targetFramework="net481" />
   <package id="Sammy.js" version="0.7.5" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
