--- a/SportsStore/SportsStore.WebUI/packages.config
+++ b/SportsStore/SportsStore.WebUI/packages.config
@@ -5,6 +5,7 @@
   <package id="Castle.Core" version="5.1.1" targetFramework="net481" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
   <package id="jQuery" version="3.7.1" targetFramework="net481" />
+  <package id="jQuery.Validation" version="1.21.0" targetFramework="net481" />
   <package id="Knockout.Validation" version="2.0.4" targetFramework="net481" />
   <package id="knockoutjs" version="3.5.1" targetFramework="net481" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net481" />
@@ -21,6 +22,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net481" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net481" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net481" />
